[package]
name = "fzstream-common"
version = "1.0.0"
edition = "2021"
authors = ["0xfnzero <byteblock6@gmail.com>"]
repository = "https://github.com/0xfnzero/fzstream-common"
description = "Common data structures and types shared between fz-stream-server and fz-stream-client"
license = "MIT"
keywords = ["solana", "streaming", "events", "common", "shared"]
categories = ["api-bindings", "data-structures"]

[lib]
name = "fzstream_common"
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
anyhow = "1.0"

# Compression
lz4 = "1.24"
zstd = "0.13"

# Solana event types
solana-streamer-sdk = { version = "0.4.1" }

[dev-dependencies]
# Test dependencies
tokio = { version = "1.0", features = ["full"] }
